2010-01-02 Dominic Hopf <dmaphy@googlemail.com>
 * update copyright information

2009-12-13 Dominic Hopf <dmaphy@googlemail.com>
 * finally fix any remaining naming issues, GeanyGDB will show up as "GeanyGDB"
   now in the plugin manager

2009-09-02 Dominic Hopf <dmaphy@googlemail.com>
 * fix an issue with button labels, where some localizations may caused a stack
   overflow
 * remember the last targetpath

2009-05-07 Dominic Hopf <dmaphy@googlemail.com>
 * install ttyhelper and geanydebug.so to /usr/lib/geany/
   patch by Chow Loong Jin, thanks!

2009-05-04 Dominic Hopf <dmaphy@googlemail.com>
 * search for a globally installed tty helper in $PREFIX/$LIBDIR/geany/,
   and fall back to the users config dir if not found. this fixes problems when
   the plugin is installed to ~/.config/geany/plugins/.
 * rename configuration directory for this plugin from "debugger" to "geanygdb",
   GeanyGDB will try to automatically rename ~/.config/geany/plugins/debugger/
   to ~/.config/geany/plugins/geanygdb/.
   You are recommended to backup this directory.

2009-05-02 Dominic Hopf <dmaphy@googlemail.com>
 * fix a crash when trying to delete breakpoints or watchpoints without
   selecting one - thanks to eht16 for the patch

2009-05-01 Dominic Hopf <dmaphy@googlemail.com>
 * fix Geany version dependency in configure.in
 * rewrite Documentation (README and INSTALL) with ReST

2009-04-18 Dominic Hopf <dmaphy@googlemail.com>
 * version bump to 0.0.2
 * this maintenance release will be compatible with Geany 0.16