@@ -20,8 +20,8 @@
 #include <string.h>
 #include <glib.h>
 
+#include "geanyplugin.h"
 #include "gdb-io-priv.h"
-#include "support.h"
 
 static GdbListFunc gdbio_stack_list_func = NULL;
 static GSList *frame_list = NULL;
