@@ -19,11 +19,11 @@
 
 
 #include <string.h>
-#include <gtk/gtk.h>
 #include <gdk/gdkkeysyms.h>
+
+#include "geanyplugin.h"
 #include "gdb-io.h"
 #include "gdb-ui.h"
-#include "support.h"
 
 enum
 {
